# cloudora

./: .env.example  .gitignore  Dockerfile  pyproject.toml
cloudora/: __init__.py  api.py  bot.py  database.py  main.py
cloudora/static/: index.html
