[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudora"
version = "1.0.0"
description = "Cloudora - Unlimited cloud storage using Telegram as backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-telegram-bot>=20.0.0",
    "jinja2>=3.0.0",
    "aiofiles>=23.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tharunramagiri/cloudora"
"Bug Tracker" = "https://github.com/tharunramagiri/cloudora/issues"

[project.scripts]
cloudora = "cloudora.main:main"

[tool.setuptools.packages.find]
include = ["cloudora*"]

[tool.setuptools.package-data]
cloudora = ["static/*"]
